# airship_simulation_ros_jazzy

./: .gitignore  check_msgs.sh  debug_blimp.sh  debug_urdf.sh  fix_remaining.sh  test_data
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fake_gps_drift/share/fake_gps_drift/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fake_gps_drift/share/fake_gps_drift/launch/: default.launch.py
log/: latest_build
src/blimp_description/: CMakeLists.txt  package.xml
src/blimp_description/launch/: blimp_diagnostic_test.launch.py  blimp_gcs.launch.py  blimp_gcs_wind.launch.py  blimp_only.launch.py  blimp_only_gcshitl.launch.py  blimp_px4.launch.py  blimp_simple_test.launch.py  blimp_with_env.launch.py  blimp_without_env.launch.py  display.launch.py  spawn_target.launch.py  spawn_uav.launch.py  teleokeyboard.launch.py  test_springs.launch.py
src/blimp_description/meshes/blimp_body/: blimp_body_cola_v1.dae  blimp_body_cola_v2.dae  blimp_body_cola_v3.dae  blimp_body_cola_v4.dae  blimp_body_v1.dae  blimp_body_v2.dae  blimp_body_v3.dae  blimp_body_v4.dae
src/blimp_description/meshes/blimp_fin/: blimp_bot_rud_part1_v1.dae  blimp_bot_rud_part1_v2.dae  blimp_bot_rud_part1_v3.dae  blimp_top_rud_part1_v1.dae  blimp_top_rud_part1_v2.dae  blimp_top_rud_part1_v3.dae  blimp_top_rud_part2_v1.dae  blimp_top_rud_part2_v2.dae  blimp_top_rud_part2_v3.dae  blimp_top_rud_part2_v4.dae  blimp_top_rud_part2_v5.dae  bot_rud_part1_v1.dae  bot_rud_part1_v2.dae  bot_rud_part1_v3.dae  top_rud_part1_v1.dae  top_rud_part1_v2.dae  top_rud_part1_v3.dae  top_rud_part2_v1.dae  top_rud_part2_v2.dae  top_rud_part2_v3.dae  top_rud_part2_v4.dae  top_rud_part2_v5.dae
src/blimp_description/meshes/blimp_gondola/: blimp_gondola_v1.dae  blimp_gondola_v2.dae  blimp_gondola_v3.dae  blimp_gondola_v4.dae
src/blimp_description/meshes/blimp_propeller/: blimp_bot_propeller_cw_v3.dae  blimp_left_propeller_ccw_v3.dae  blimp_left_propeller_v1.dae  blimp_right_propeller_cw_v3.dae  blimp_right_propeller_v3.dae  meshes_blimp_wing_propeller_cw.dae  propeller_ccw.dae  propeller_ccw_v2.dae  propeller_ccw_v3.dae  propeller_cw.dae  propeller_cw_v2.dae  propeller_cw_v3.dae
src/blimp_description/meshes/blimp_support/: blimp_support.dae  blimp_support_v2.dae  blimp_support_v3.dae  blimp_support_v4.dae  blimp_support_v5.dae
src/blimp_description/meshes/blimp_wing/: blimp_stick_v1.dae  blimp_stick_v2.dae  blimp_wing_v1.dae  blimp_wing_v2.dae
src/blimp_description/meshes_blimp_backup_20250722_055358/: blimp_body_cola_v1.dae  blimp_body_cola_v2.dae  blimp_body_cola_v3.dae  blimp_body_cola_v4.dae
src/blimp_description/meshes_blimp_backup_20250722_055826/: blimp_body_v1.dae  blimp_body_v2.dae  blimp_body_v3.dae  blimp_body_v4.dae
src/blimp_description/resource/: aero_params_blimp.yaml  blimp.yaml  controller_blimp.yaml  lee_controller_blimp.yaml  px4_sensor_bridge.yaml  techpod.yaml
src/blimp_description/rviz/: 3_blimp.rviz  3_blimp_nmpc.rviz  4_blimp.rviz  blimp.rviz  blimp_mpc.rviz
src/blimp_description/script/: batch_dae_convert_inplace.py  blimp_body_rotator.py  dae_convert.py  mavros_sensor_bridge.py  px4_blimp_control.py  px4_sitl_launcher.py
src/blimp_description/urdf/: asus_camera.urdf.xacro  blimp_base.xacro  description_controller.xacro  description_link.xacro  description_plugin.xacro  description_property.xacro  description_sensor.xacro  inertia_calculator.xacro  model_xacro.xacro  plugin_component_snippets.xacro  plugin_control.xacro  plugin_physics.xacro  plugin_sensors.xacro
src/blimp_description/worlds/: arena_RAL.sdf  arena_RAL.world  basic.sdf  basic.world  empty.sdf  empty.world  spring_damper_test.sdf  spring_damper_test.world  test_minimal.sdf  transparency.sdf  transparency.world  wind.sdf  wind.world  wind_field.txt  yosemite.sdf  yosemite.world
src/blimp_gazebo_plugin/: CMakeLists.txt  package.xml
src/blimp_gazebo_plugin/env-hooks/: blimp_gazebo_plugin.dsv.in
src/blimp_gazebo_plugin/include/: dynamicvolume_plugin.hpp  finliftdrag_plugin.hpp  normwind_plugin.hpp
src/blimp_gazebo_plugin/launch/: test_plugins_launch.py
src/blimp_gazebo_plugin/scripts/: plugin_monitor.py  verify_plugins.sh
src/blimp_gazebo_plugin/src/: dynamicvolume_plugin.cpp  finliftdrag_plugin.cpp  normwind_plugin.cpp
src/blimp_gazebo_plugin/worlds/: test_plugins.sdf
src/blimp_tilt_scaler/: package.xml  setup.cfg  setup.py
src/blimp_tilt_scaler/blimp_tilt_scaler/: servo_scaler.py
src/fake_gps_drift/: package.xml  setup.cfg  setup.py
src/fake_gps_drift/fake_gps_drift/: fake_gps_drift_node.py
src/fake_gps_drift/launch/: default.launch.py
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: AttitudeThrust.msg  FilteredSensorData.msg  GpsWaypoint.msg  RateThrust.msg  RollPitchYawrateThrust.msg  Status.msg  TorqueThrust.msg  UavPose.msg
