<?xml version="1.0"?>
<package format="3">
  <name>blimp_description</name>
  <version>0.0.1</version>
  <description>Blimp robot description for ROS2/Gazebo Harmonic with PX4 integration</description>

  <maintainer email="mahabbak@your-email.com">Mohamed Elhabbak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 Core -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  
  <!-- ROS2 Control (only if using physics) -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>gz_ros2_control</depend>
  
  <!-- Gazebo Harmonic -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  
  <!-- Blimp Gazebo Plugin -->
  <depend>blimp_gazebo_plugin</depend>
  
  <!-- Messages and TF -->
  <depend>msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Launch and Utilities -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  
  <!-- GPS Drift Simulation -->
  <depend>fake_gps_drift</depend>
  
  <!-- PX4/MAVROS Integration (ADDED for PX4 support) -->
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>mavros_extras</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>
  
  <!-- REMOVED: LibrePilot dependencies -->
  <!-- <depend>roshitl</depend> -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>