<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blimp_gazebo_plugin</name>
  <version>2.0.0</version>
  <description>Gazebo Harmonic plugins for blimp simulation</description>
  <maintainer email="mahabbak@gmail.com">Mohamed ElHabbak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Vendor packages for Gazebo Harmonic -->
  <depend>gz_cmake_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_common_vendor</depend>
  <depend>gz_sim_vendor</depend>

  <!-- Messages dependancy -->
  <depend>msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>