<package format="3">
  <name>blimp_tilt_scaler</name>
  <version>0.0.1</version>
  <description>Scale Gazebo tilt servo from ±45° to ±90°</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- This tells colcon it's a Python package (not ament_cmake),
         so it won't try to run CMake. -->
    <build_type>ament_python</build_type>
  </export>
</package>
